buildscript {
    ext {
        springBootVersion = "2.7.4"
        springDependencyManagementVersion = "1.0.14.RELEASE"
    }
}

allprojects {
}

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    java {
        targetCompatibility = JavaVersion.VERSION_17;
        sourceCompatibility = JavaVersion.VERSION_17;
    }

    compileJava {
        options.encoding = "UTF-8"
    }

    compileTestJava {
        options.encoding = "UTF-8"
    }

}
task jacocoRootReport(type: JacocoReport){
    dependsOn = subprojects.test
    reports {
        html.enabled = true
        xml.enabled = true
        csv.enabled =false
    }
}
